
Bugfixes
    StringListData & isStateChanged                                             | See #637
    BeanUtil.isWritable returns false when the setter is actually available     | See #727
    Modalbox design problems with IE                                            | See #729
    Autocompleter and scrolling ability of search results                       | See #730

---------------------------------------------------------------------------------------------
2008.12.02    | Aranea 1.2 RC2

Features and Improvements
    Update region and focus                                                     | See #721
    Overlay dialog - positioning and scrolling                                  | See #723

Bugfixes
    Exception when session has expired and user navigates back/forward          | See #720
    Local form element validation does not remove old error messages            | See #719
    Aranea 1.2 demo app does not work with IE                                   | See #722

---------------------------------------------------------------------------------------------
2008.11.18    | Aranea 1.2 RC1

Features and Improvements
    Updated third-party scripts                                                 | See #678
    cancel() and finish(Object) for OverlayContext                              | See #708
    OrFilter for list rows filtering and for entire filter elements             | See #701
    file importer writes into response header Cache-Control: max-age=3600       | See #669
    Lower-than-or-equal and greater-than-or-equal constraints                   | See #704
    EnvrionmentUtil enhancement                                                 | See #703
    DefaultResultSetColumnReader: error message needs to be more precise        | See #702
    OrFilter for list rows filtering and for entire filter elements             | See #701
    DisplayItem + SelectControl refactor                                        | See #272

Bugfixes