@@ -1,1 +1,1 @@
-currentVersion=3.1.2.2
+currentVersion=3.1.2.3
