@@ -16,42 +16,38 @@
 
 package org.araneaframework.uilib.list;
 
-import org.araneaframework.backend.util.BeanUtil;
 import org.araneaframework.core.Assert;
 
 /**
  * ListWidget that is aware of field types according to the Bean type.
  * 
  * @author <a href="mailto:rein@araneaframework.org">Rein Raudjärv</a>
- * 
  * @see ListWidget
  */
 public class BeanListWidget extends ListWidget {
-	
-	private static final long serialVersionUID = 1L;
-	
-	protected final Class beanType;
-	
-	/**
-	 * Constructs a {@link BeanListWidget} for specified Bean type.
-	 * 
-	 * @param beanType list element type.
-	 */
-	public BeanListWidget(Class beanType) {
-		super();
-		Assert.notNullParam(this, beanType, "beanType");
-		this.beanType = beanType;
-	}
-	
-	protected TypeHelper createTypeHelper() {
-		return new TypeHelper() {			
-			public Class getFieldType(String fieldId) {
-				Class result = super.getFieldType(fieldId);
-				if (result == null) {
-					result = BeanUtil.getFieldType(beanType, fieldId);
-				}
-				return result;
-			}
-		};	
-	}
+
+  private static final long serialVersionUID = 1L;
+
+  protected final Class beanType;
+
+  /**
+   * Constructs a {@link BeanListWidget} for specified Bean type.
+   * 
+   * @param beanType list element type.
+   */
+  public BeanListWidget(Class beanType) {
+    Assert.notNullParam(this, beanType, "beanType");
+    this.beanType = beanType;
+    this.typeHelper = createTypeHelper();
+    this.listStructure = createListStructure();
+  }
+
+  protected TypeHelper createTypeHelper() {
+    // beanType == null when the constructor of the parent class is executed.
+    if (this.beanType == null) {
+      return super.createTypeHelper();
+    } else {
+      return new BeanTypeHelper(this.beanType);
+    }
+  }
 }
