@@ -3,4 +3,4 @@ araneaframework.status=milestone
 version.stage=3
 version.milestone=1
 version.submilestone=2
-version.version=2
+version.version=3
